@@ -47,6 +47,7 @@ android {
 
     defaultConfig {
         multiDexEnabled true
+        namespace = "com.microsoft.identity.client.msal.automationapp"
         applicationId "com.msft.identity.client.sample"
         minSdkVersion rootProject.ext.automationAppMinSDKVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
